--- a/example/methods.html
+++ b/example/methods.html
@@ -41,6 +41,14 @@ THE SOFTWARE.
                                 noOp: {
                                     isVoid: true
                                 }
+                            },
+                            local: {
+                                alertMessage: {
+                                    method: function(msg){
+                                        alert(msg);
+                                    },
+                                    isVoid: true
+                                }
                             }
                         }, function(){
                             if (location.hash) {
@@ -67,10 +75,10 @@ THE SOFTWARE.
             #embedded {
                 width: 300px;
                 height: 100px;
-                border: 1px dotted black;
             } #embedded iframe {
                 width: 100%;
                 height: 100%;
+                border: 1px dotted black;
             }
         </style>
     </head>
@@ -80,20 +88,22 @@ THE SOFTWARE.
         </script>
         <div id="embedded">
         </div>
-        The remote implementation is synchronous and will return immediately
-        <br/>
-        <input type="button" onclick="add(3,5)" value="call addNumbers on remote domain"/>
-        <br/>
-        <br/>
-        The remote implementation of multiplyNumbers is asynchronous and will return after 5seconds
-        <br/>
-        This shows that you can use async calls in the remote method, eg. XHR calls
-        <br/>
-        <input type="button" onclick="multiply(3,5)" value="call multiplyNumbers on remote domain"/>
-        <br/>
-        <br/>
-        This calls a non-returning method on the remote side
-        <br/>
-        <input type="button" onclick="remote.noOp()" value="call noOp on the remote domain"/>
+        <div>
+            The remote implementation is synchronous and will return immediately
+            <br/>
+            <input type="button" onclick="add(3,5)" value="call addNumbers on remote domain"/>
+            <br/>
+            <br/>
+            The remote implementation of multiplyNumbers is asynchronous and will return after 5seconds
+            <br/>
+            This shows that you can use async calls in the remote method, eg. XHR calls
+            <br/>
+            <input type="button" onclick="multiply(3,5)" value="call multiplyNumbers on remote domain"/>
+            <br/>
+            <br/>
+            This calls a non-returning method on the remote side
+            <br/>
+            <input type="button" onclick="remote.noOp()" value="call noOp on the remote domain"/>
+        </div>
     </body>
 </html>
