Added the easyXSS.Debug namespace

--- a/src/example/data.html
+++ b/src/example/data.html
@@ -23,5 +23,6 @@
         </script>
     </head>
     <body>
+		<div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
     </body>
 </html>
