--- a/src/example/index.html
+++ b/src/example/index.html
@@ -34,6 +34,7 @@
         </script>
     </head>
     <body>
+		<div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
         <input type="button" onclick="proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to remote"/>
     </body>
 </html>
