--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -54,19 +54,18 @@
         </script>
         <style type="text/css">
             #embedded {
-                width: 300px;
-                height: 100px;
+                height: 200px;
             } #embedded iframe {
                 width: 100%;
                 height: 100%;
-                border: 1px dotted black;
             }
         </style>
     </head>
     <body>
-        <script type="text/javascript">
+		<script type="text/javascript">
             document.write("Domain: " + location.host);
         </script>
+        <div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
         <div id="embedded">
         </div>
         <div>
