--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -18,5 +18,6 @@
         </script>
     </head>
     <body>
+		<div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
     </body>
 </html>
