--- a/src/example/remoteapp.html
+++ b/src/example/remoteapp.html
@@ -4,6 +4,7 @@
         <title>easyXSS</title>
     </head>
     <body>
+    	<!-- Send some data to the other side using the proxy -->
         <input type="button" onclick="window.opener.proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to local"/>
     </body>
 </html>
