--- a/src/example/index.html
+++ b/src/example/index.html
@@ -5,17 +5,33 @@
         <script type="text/javascript" src="../easyXSS.debug.js">
         </script>
         <script type="text/javascript">
+            /**
+             * Request the use of the JSON object
+             */
             easyXSS.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
-            /* This window will create a proxy to different domain.
-             * The remote side of the proxy can be used to run XHR-requests or can open
-             * a window with window.open so that the user has two windows from two domains
-             * that are able to communicate.
+            /* Here we demo how to have two visible web applications communicate together.
+             * This is done by having the remote interface open a visible window and loading
+             * the application in this.
+             * Since the remote interface has access to the entire DOM (including javascript)
+             * of the opened window, the remote interface is able to interface freely with the
+             * remote web application and can serve as a bridge between the two applications.
              */
             var proxy;
+            /**
+             * When the window is finished loading start setting up the channel
+             */
             window.onload = function(){
-                proxy = easyXSS.createChannel({
+                /**
+                 * We start by creating a channel
+                 */
+                proxy = easyXSS.createChannel(/** The configuration */{
+                    /**
+                     * Register the method that should handle incoming data
+                     * @param {Object} data
+                     * @param {String} origin
+                     */
                     onData: function(data, origin){
                         var div = document.createElement("div");
                         div.innerHTML = "data from '" + origin + "'";
@@ -26,15 +42,30 @@
                             document.body.appendChild(div);
                         }
                     },
+                    /**
+                     * Register the serializer to use for converting messages
+                     * @field
+                     */
                     converter: JSON,
+                    /**
+                     * Register the url to hash.html, this must be an absolute path
+                     * or a path relative to the root.
+                     * @field
+                     */
                     local: "/hash.html",
+                    /**
+                     * Register the url to the remote interface
+                     * @field
+                     */
                     remote: "http://provider.easyxss.net/example/remote.html"
                 });
             }
         </script>
     </head>
     <body>
-		<div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
-        <input type="button" onclick="proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to remote"/>
+        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
+        </div>
+        <!-- Send som data to the other side --><input type="button" onclick="proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to remote"/>
     </body>
 </html>
