--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -5,38 +5,62 @@
         <script type="text/javascript" src="../easyXSS.debug.js">
         </script>
         <script type="text/javascript">
+            /**
+             * Request the use of the JSON object
+             */
             easyXSS.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
             var channel, remote;
+            /**
+             * When the window is finished loading start setting up the channel
+             */
             window.onload = function(){
-                channel = easyXSS.createChannel({
+                /**
+                 * We start by creating a channel
+                 */
+                channel = easyXSS.createChannel(/** The configuration */{
+                    /**
+                     * Register the url to hash.html, this must be an absolute path
+                     * or a path relative to the root.
+                     * @field
+                     */
                     local: "/hash.html",
+                    /**
+                     * Register the url to the remote interface
+                     * @field
+                     */
                     remote: "http://provider.easyxss.net/example/remotemethods.html",
-                    container: document.getElementById("embedded"),
-                    onReady: function(){
-                        remote = easyXSS.createInterface(channel, {
-                            remote: {
-                                addNumbers: {},
-                                multiplyNumbers: {},
-                                noOp: {
-                                    isVoid: true
-                                }
-                            },
-                            local: {
-                                alertMessage: {
-                                    method: function(msg){
-                                        alert(msg);
-                                    },
-                                    isVoid: true
-                                }
+                    /**
+                     * Register the DOMElement that the generated IFrame should be inserted into
+                     */
+                    container: document.getElementById("embedded")
+                },/**The onReady handler*/ function(){
+                    /**
+                     * When the channel is ready we create the interface
+                     */
+                    remote = easyXSS.createInterface(/** The channel to use*/channel, /** The configuration */ {
+                        remote: {
+                            addNumbers: {},
+                            multiplyNumbers: {},
+                            noOp: {
+                                isVoid: true
                             }
-                        }, function(){
-                            if (location.hash) {
-                                remote.noOp();
+                        },
+                        local: {
+                            alertMessage: {
+                                method: function(msg){
+                                    alert(msg);
+                                },
+                                isVoid: true
                             }
-                        });
-                    }
+                        }
+                    },/**The onReady handler*/ function(){
+                        /**
+                         * Call a method on the other side
+                         */
+                        remote.noOp();
+                    });
                 });
             }
             
@@ -62,10 +86,12 @@
         </style>
     </head>
     <body>
-		<script type="text/javascript">
+        <script type="text/javascript">
             document.write("Domain: " + location.host);
         </script>
-        <div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
+        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
+        </div>
         <div id="embedded">
         </div>
         <div>
