--- a/src/example/remotemethods.html
+++ b/src/example/remotemethods.html
@@ -5,52 +5,63 @@
         <script type="text/javascript" src="../easyXSS.debug.js">
         </script>
         <script type="text/javascript">
+            /**
+             * Request the use of the JSON object
+             */
             easyXSS.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
             var channel, remote;
+            /**
+             * When the window is finished loading start setting up the channel
+             */
             window.onload = function(){
-                channel = easyXSS.createChannel({
-                    onReady: function(){
-                        remote = easyXSS.createInterface(channel, {
-                            remote: {
-                                alertMessage: {
-                                    isVoid: true
+                /**
+                 * We start by creating a channel
+                 */
+                channel = easyXSS.createChannel(/** The configuration */{}, /**The onReady handler*/ function(){
+                    /**
+                     * When the channel is ready we create the interface
+                     */
+                    remote = easyXSS.createInterface(/** The channel to use*/channel, /** The configuration */ {
+                        remote: {
+                            alertMessage: {
+                                isVoid: true
+                            }
+                        },
+                        local: {
+                            addNumbers: {
+                                method: function(a, b){
+                                    return a + b;
                                 }
                             },
-                            local: {
-                                addNumbers: {
-                                    method: function(a, b){
-                                        return a + b;
-                                    }
-                                },
-                                multiplyNumbers: {
-                                    isAsync: true,
-                                    method: function(a, b, fn){
-                                        window.setTimeout(function(){
-                                            fn(a * b);
-                                        }, 5000);
-                                    }
-                                },
-                                noOp: {
-                                    isVoid: true,
-                                    method: function(){
-                                        alert("Method not returning any data");
-                                    }
+                            multiplyNumbers: {
+                                isAsync: true,
+                                method: function(a, b, fn){
+                                    window.setTimeout(function(){
+                                        fn(a * b);
+                                    }, 5000);
+                                }
+                            },
+                            noOp: {
+                                isVoid: true,
+                                method: function(){
+                                    alert("Method not returning any data");
                                 }
                             }
-                        });
-                    }
+                        }
+                    });
                 });
             }
         </script>
     </head>
     <body>
-		<script type="text/javascript">
+        <script type="text/javascript">
             document.write("Domain: " + location.host);
         </script>
-        <div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
-        <br/>
+        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
+        </div>
         <input type="button" onclick="remote.alertMessage('message from remote');" value="call alertMessage on local domain"/>
     </body>
 </html>
