--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -6,18 +6,37 @@
         </script>
         <script type="text/javascript">
             var transport;
+            /**
+             * When the window is finished loading start setting up the transport
+             */
             window.onload = function(){
-                transport = easyXSS.createTransport({
+                /**
+                 * We start by creating a transport
+                 */
+                transport = easyXSS.createTransport(/** The configuration */{
+                    /**
+                     * Register the url to hash.html, this must be an absolute path
+                     * or a path relative to the root.
+                     * @field
+                     */
                     local: "/hash.html",
-                    remote: "http://provider.easyxss.net/example/remotetransport.html",
-                    onReady: function(){
-                        transport.postMessage("This is a message sent from " + location);
-                    }
+                    /**
+                     * Register the url to the remote interface
+                     * @field
+                     */
+                    remote: "http://provider.easyxss.net/example/remotetransport.html"
+                },/**The onReady handler*/ function(){
+                    /**
+                     * Send a message to the other side
+                     */
+                    transport.postMessage("This is a message sent from " + location);
                 });
             }
         </script>
     </head>
     <body>
-		<div id="log" style="height:100px;border:1px dotted black;overflow:auto"></div>
+        <!-- easyXSS.Debug.trace(msg) will output its messages to any element with the id "log" -->
+        <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
+        </div>
     </body>
 </html>
