Fixed a bug where the onReady handler for Channel was not passed on from createChannel Changed to using the 'new className' construct over 'createClassName' methods

--- a/src/example/data.html
+++ b/src/example/data.html
@@ -13,7 +13,7 @@
                 /**
                  * We start by creating a channel
                  */
-                channel = easyXSS.createChannel(/** The configuration */{
+                channel = new easyXSS.Channel(/** The configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
