--- a/src/example/index.html
+++ b/src/example/index.html
@@ -26,7 +26,7 @@
                 /**
                  * We start by creating a channel
                  */
-                proxy = easyXSS.createChannel(/** The configuration */{
+                proxy = new easyXSS.Channel(/** The configuration */{
                     /**
                      * Register the method that should handle incoming data
                      * @param {Object} data
