--- a/src/example/remotedata.html
+++ b/src/example/remotedata.html
@@ -13,7 +13,7 @@
                 /**
                  * We start by creating a channel
                  */
-                channel = easyXSS.createChannel(/** The configuration */{
+                channel = new easyXSS.Channel(/** The configuration */{
                     /**
                      * Register the serializer to use for converting messages
                      * @field
