--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -19,7 +19,7 @@
                 /**
                  * We start by creating a channel
                  */
-                channel = easyXSS.createChannel(/** The configuration */{
+                channel = new easyXSS.Channel(/** The configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
@@ -39,7 +39,7 @@
                     /**
                      * When the channel is ready we create the interface
                      */
-                    remote = easyXSS.createInterface(/** The channel to use*/channel, /** The configuration */ {
+                    remote = new easyXSS.Interface(/** The channel to use*/channel, /** The configuration */ {
                         remote: {
                             addNumbers: {},
                             multiplyNumbers: {},
