--- a/src/example/remotemethods.html
+++ b/src/example/remotemethods.html
@@ -16,41 +16,37 @@
              * When the window is finished loading start setting up the channel
              */
             window.onload = function(){
+            
                 /**
-                 * We start by creating a channel
+                 * When the channel is ready we create the interface
                  */
-                channel = new easyXSS.Channel(/** The configuration */{}, /**The onReady handler*/ function(){
-                    /**
-                     * When the channel is ready we create the interface
-                     */
-                    remote = new easyXSS.Interface(/** The channel to use*/channel, /** The configuration */ {
-                        remote: {
-                            alertMessage: {
-                                isVoid: true
+                remote = new easyXSS.Interface(/** The channel configuration*/{}, /** The configuration */ {
+                    remote: {
+                        alertMessage: {
+                            isVoid: true
+                        }
+                    },
+                    local: {
+                        addNumbers: {
+                            method: function(a, b){
+                                return a + b;
                             }
                         },
-                        local: {
-                            addNumbers: {
-                                method: function(a, b){
-                                    return a + b;
-                                }
-                            },
-                            multiplyNumbers: {
-                                isAsync: true,
-                                method: function(a, b, fn){
-                                    window.setTimeout(function(){
-                                        fn(a * b);
-                                    }, 5000);
-                                }
-                            },
-                            noOp: {
-                                isVoid: true,
-                                method: function(){
-                                    alert("Method not returning any data");
-                                }
+                        multiplyNumbers: {
+                            isAsync: true,
+                            method: function(a, b, fn){
+                                window.setTimeout(function(){
+                                    fn(a * b);
+                                }, 5000);
+                            }
+                        },
+                        noOp: {
+                            isVoid: true,
+                            method: function(){
+                                alert("Method not returning any data");
                             }
                         }
-                    });
+                    }
                 });
             }
         </script>
