Several minor modifications Fixed bug in the onReady handler for HashTransport

--- a/src/example/data.html
+++ b/src/example/data.html
@@ -22,7 +22,7 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: "http://provider.easyxss.net/example/remotedata.html",
+                    remote: "http://provider.easyxdm.net/example/remotedata.html",
                     
                     /**
                      * Register the serializer to use for converting messages
