--- a/src/example/index.html
+++ b/src/example/index.html
@@ -55,7 +55,7 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: "http://provider.easyxss.net/example/remote.html"
+                    remote: "http://provider.easyxdm.net/example/remote.html"
                 });
             }
         </script>
