--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -27,7 +27,7 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: "http://provider.easyxss.net/example/remotemethods.html",
+                    remote: "http://provider.easyxdm.net/example/remotemethods.html",
                     /**
                      * Register the DOMElement that the generated IFrame should be inserted into
                      */
