--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -22,7 +22,7 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: "http://provider.easyxss.net/example/remotetransport.html"
+                    remote: "http://provider.easyxdm.net/example/remotetransport.html"
                 },/**The onReady handler*/ function(){
                     /**
                      * Send a message to the other side
