--- a/src/hash.html
+++ b/src/hash.html
@@ -9,7 +9,7 @@
                 /**
                  * Notify the library that the transport is ready
                  */
-                window.parent.parent.easyXDM.Events.onReady(location.hash.substring(1));
+                window.parent.parent.easyXDM.Transport.HashTransport.registerWindow(location.hash.substring(1), window);
             }
         </script>
     </head>
