Added a xhr example. Added support for relative paths to hash.html. Removed the version string when referencing hash.html. The developer should use different names to differentiate between versions.

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -50,7 +50,7 @@
                      * or a path relative to the root.
                      * @field
                      */
-                    local: "/hash.html",
+                    local: "../hash.html",
                     /**
                      * Register the url to the remote interface
                      * @field
