--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -17,7 +17,7 @@
                      * or a path relative to the root.
                      * @field
                      */
-                    local: "/hash.html",
+                    local: "../hash.html",
                     /**
                      * Register the url to the remote interface
                      * @field
