--- a/src/header.html
+++ b/src/header.html
@@ -1,7 +1,7 @@
 <!--
- easyXDM 1.2
- http://easyxss.net/
- Copyright(c) 2009, Øyvind Sean Kinsey, oyvind@kinsey.no.
+ easyXDM 
+ http://easydm.net/
+ Copyright(c) 2009, Ã˜yvind Sean Kinsey, oyvind@kinsey.no.
  
- MIT Licensed - http://easyxss.net/license/mit.txt 
+ MIT Licensed - http://easyxdm.net/license/mit.txt 
 -->
