--- a/src/example/index.html
+++ b/src/example/index.html
@@ -61,7 +61,12 @@
         </script>
     </head>
     <body>
-        <div>
+        <div style="border:1px solid black;padding:3px">
+            <div style="float:right">
+                <a href="http://www.addthis.com/bookmark.php?v=250&amp;pub=xa-4a6cb9890fd71978" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]');" onmouseout="addthis_close();" onclick="return addthis_sendto();"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a>
+                <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=xa-4a6cb9890fd71978">
+                </script>
+            </div>
             <a href="http://easyxdm.net/docs/">See easyxdm.net/docs for full documentation and more examples</a>
             <br/>
             The examples are executing slower than the production build due to the extensive tracing.
