--- a/src/example/xhr.html
+++ b/src/example/xhr.html
@@ -94,7 +94,7 @@
             <br/>
             <input type="button" onclick="getGlossary()" value="Call getGlossary using the exposed method"/>
             <br/>
-            <input type="button" onclick="getGlossaryUsingAjax()" value="Call getGlossary using the exposed ajax wraper"/>
+            <input type="button" onclick="getGlossaryUsingAjax()" value="Call getGlossary using the exposed ajax wrapper"/>
         </div>
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
