Changed into using lowercase namespaces.

--- a/src/example/data.html
+++ b/src/example/data.html
@@ -27,7 +27,7 @@
                      * Register the serializer to use for converting messages
                      * @field
                      */
-                    converter: easyXDM.Serializing.hashTableSerializer
+                    converter: easyXDM.serializing.hashTableSerializer
                 },/**The onReady handler*/ function(){
                     /**
                      * Send some data to the other side
