--- a/src/example/remotedata.html
+++ b/src/example/remotedata.html
@@ -18,7 +18,7 @@
                      * Register the serializer to use for converting messages
                      * @field
                      */
-                    converter: easyXDM.Serializing.hashTableSerializer,
+                    converter: easyXDM.serializing.hashTableSerializer,
                     /**
                      * Register the method that should handle incoming data
                      * @param {Object} data
