--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -11,7 +11,7 @@
                 /**
                  * When the window is finished loading start setting up the transport
                  */
-                transport = new easyXDM.Transport.BestAvailableTransport(/** The configuration */{
+                transport = new easyXDM.transport.BestAvailableTransport(/** The configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
