--- a/src/example/data.html
+++ b/src/example/data.html
@@ -55,6 +55,10 @@
         <!-- easyXDM.Debug.trace(msg) will output its messages to any element with the id "log" -->
         <div id="log" style="height:100px;border:1px dotted black;overflow:auto">
         </div>
+        </div>
+		<br/>
+		<br/>
+		<input type="text" id="code" size="100" value="channel.sendData({propC:'c',procD:'d',propE:88})"/><button onclick="eval(document.getElementById('code').value);">eval code</button>
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
