--- a/src/example/xhr_remote.html
+++ b/src/example/xhr_remote.html
@@ -10,7 +10,7 @@
              */
             easyXDM.DomHelper.requiresJSON("../json2.js");
         </script>
-        <script type="text/javascript" src="../jquery-1.3.2.min.js">
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
         </script>
         <script type="text/javascript">
             
