--- a/src/tests/test_postmessagetransport.html
+++ b/src/tests/test_postmessagetransport.html
@@ -3,6 +3,8 @@
     <head>
         <title>easyXDM</title>
         <script type="text/javascript" src="../easyXDM.debug.js">
+            //Is not executed, but makes jslint validate
+            var easyXDM;
         </script>
         <script type="text/javascript">
             var transport;
@@ -17,9 +19,11 @@
                     }
                 });
             };
-			window.onbeforeunload=function(){
-				transport.destroy();
-			};
+            window.onunload = function(){
+                if (transport) {
+                    transport.destroy();
+                }
+            };
         </script>
     </head>
     <body>
